fix signup form on mobile

--- a/app/static/css/camp.css
+++ b/app/static/css/camp.css
@@ -386,3 +386,22 @@ select
 .mainpage-slider-container .arrow-scroll-down {
     margin-left:-10px;
 }
+
+@media all and (max-width: 767px){
+.camp-attend-fields-block{
+width: 100%;
+}
+.input-group input{
+margin: 5px 0 5px 0;
+padding: 0 5px;
+}
+.input-group p{
+line-height: 1.4em;
+}
+.input-group select{
+text-indent: 0;
+}
+.form-attend label{
+text-align: left;
+}
+}
